# home-agent-suite

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_STREAMLIT.md  SECURITY.md  app.py  conftest.py  demo_app.py  pyproject.toml  pytest.ini  sync-deps.sh
.claude/agents/: qa-test-engineer.md
.continue/: config.json
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
agents/day_planner/: __init__.py  agent.py  prompt.py  pyproject.toml
agents/day_planner/tests/: test_day_planner_agent.py
agents/google_search_agent/: __init__.py  agent.py
agents/google_search_agent/tests/: __init__.py  conftest.py  test_error_handling.py  test_google_search_agent.py  test_integration.py
agents/google_search_agent/tests/fixtures/: __init__.py  mock_search_responses.json  test_queries.py
agents/home_assistant_agent/: agent.py  prompt.py  pyproject.toml
agents/home_assistant_agent/tests/: test_agent.py
agents/supervisor/: README.md  pyproject.toml
agents/supervisor/src/supervisor/: __init__.py  agent.py
agents/supervisor/tests/: check_imports.py  test_supervisor.py
infrastructure/github/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  branch_protection.py  pyproject.toml  repository_settings.py
libs/common_logging/: logging_utils.py  pyproject.toml
libs/common_logging/src/common_logging/: __init__.py  logging_utils.py
libs/common_logging/tests/: test_logging_utils.py
libs/home_assistant_client/: pyproject.toml
libs/home_assistant_client/src/home_assistant_client/: client.py
libs/home_assistant_client/tests/: test_client.py
libs/tomorrow_io_client/: pyproject.toml
libs/tomorrow_io_client/src/tomorrow_io_client/: __init__.py  client.py
libs/tomorrow_io_client/tests/: __init__.py  test_client.py  test_geocoding.py
tests/: test_app_extra.py  test_demo_app.py
tests/e2e/: test_conversation_flows.py  test_error_scenarios.py  test_search_workflows.py  test_weather_workflows.py
tests/fixtures/: conversation_scenarios.json
tests/integration/: conftest.py  test_agent_tool_flows.py  test_api_integrations.py  test_session_management.py  test_streamlit_agent_integration.py
tests/streamlit/: README.md  conftest.py  test_app_simple.py
tests/streamlit/fixtures/: mock_agent_responses.json  sample_conversations.py
ui/: backend.py  components.py  styles.py
