[tool.poetry]
name = "common_logging"
version = "0.1.0"
description = "Shared logging utilities for home-agent-suite monorepo"
authors = ["davidasnider <david@davidsnider.org>"]

[tool.poetry.dependencies]
python = ">=3.9"
google-cloud-logging = "^3.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.1.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
