[tool.poetry]
name = "tomorrow-io-client"
version = "0.1.0"
description = "A client library for the Tomorrow.io API."
authors = ["David Snider <david@davidsnider.org>"]
[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
common_logging = { path = "../common_logging", develop = true }
tzlocal = "^5.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
requests-mock = "^1.11.0"
pytest-cov = "^6.0.0"
